@@ -1,7 +1,10 @@
 2002-05-16  Jody Goldberg <jody@gnome.org>
 
-	* gnomecc-ui.xml : Have bonobo generate some content.
-	Its broken currently, but we're getting closer.
+	* capplet-dir-view.c (capplet_dir_view_init) : pass a slightly more
+	  realistic path.
+	(help_menu_cb) : new.
+
+	* gnomecc-ui.xml : Add some help content.
 
 2002-03-19  Lauris Kaplinski  <lauris@ximian.com>
 
